hphp/test/slow/hack_mode/closing-tag-php.php.expectf

Fatal error: syntax error, unexpected T_HH_ERROR, expecting $end in %s/test/slow/hack_mode/closing-tag-php.php on line 2
